2023-06-24  <daniel.diaz@univ-paris1.fr>

	* fix issue #41: ISO requires: round(4.5) = 5 and round(-4.5) = -4
	* fix issue #40: new builts-in predicates: current_evaluable/1 and evaluable_property/2

2023-06-20  <daniel.diaz@univ-paris1.fr>

	* replace previous pragma directives by the unique compiler_mode/1 directive.

 2023-06-15  <daniel.diaz@univ-paris1.fr>

	* rename gplc/pl2wam --pre-load option simply as --include
	* add pragma directives to inform the compiler about term expansion

2023-06-09  <daniel.diaz@univ-paris1.fr>

	* fix issue #38: add more error detections in format/2-3
	* fix issue #39: bug in conditional compilation directives

2023-06-07  <daniel.diaz@univ-paris1.fr>

	* rename pl2wam --pl-state option (and concept) as --pre-load

2023-06-07  <daniel.diaz@univ-paris1.fr>

	* add a consult/2 built-in (consult with options)

2023-06-05  <daniel.diaz@univ-paris1.fr>

	* fix issue #37: bug in format/2-3
	* update the doc

2023-06-04  <daniel.diaz@univ-paris1.fr>

	* fix issue #13: user meta_predicate definition is now returned by predicate_property/2
	* initial support for term_expansion/2 and new pre-load file format (now it is a Prolog text)
	* speed up dynamic predicates with many clauses (for wordnet)
	* improve linedit completion with a new map implementation (improves consult of wordnet files)
	* simplify ChangeLog dates

2023-04-15  <daniel.diaz@univ-paris1.fr>

	* improve compiler speed on large Prolog data bases (for wordnet)
	  (use new map implementation (based on red-black trees) for wam2ma and ma2asm)

2023-04-07  <daniel.diaz@univ-paris1.fr>

	* start version 1.6.0
	* add a Tools directory for tools common to runtime and standalone sub-compilers
	* converge code master with branch and contexts from spa

2023-03-22  <daniel.diaz@univ-paris1.fr>

	* fix issue #32: remove duplicate warning message

2023-03-10  <daniel.diaz@univ-paris1.fr>

	* improve compiler speed on large Prolog data bases