@@ -1,5 +1,8 @@
 Change in GNU Prolog version 1.6.0
 
+* fix issue #43: add call_nth/2 built-in (part of the  Prolog prologue)
+* add built-in nb_setarg/3 (special case of setarg/4)
+* fix issue #26: missing int_overflow for succ/2
 * fix issue #41: ISO requires: round(4.5) = 5 and round(-4.5) = -4
 * fix issue #40: new builts-in predicates: current_function/1 and function_property/2
 * fix issue #31: support for term_expansion/2, with new mechanisms:
